title.css : correction alignement élement

--- a/src/Title/Title.css
+++ b/src/Title/Title.css
@@ -21,7 +21,6 @@
     font-size: 1rem;
     margin-top: .5rem;
     margin-bottom: .5rem;
-    margin-left: .25rem;
 }
 
 .title .btn--iconLight{
@@ -32,8 +31,7 @@
     display: inline-block;
     font-size: 1.1rem;
     height: 2.5rem;
-    margin-left: .25rem;
-    margin-right: .25rem;
+    margin-right: .5rem;
     min-width: 2.5rem;
     outline: none;
     padding: .5rem ;
